# path_tracer_cloth

./: Cargo.toml  LICENSE  README.md
src/: bvh.rs  camera.rs  lib.rs  main.rs  material.rs  path_trace.rs  ray.rs  scene.rs  triangle.rs  triangle_mesh.rs
