[package]
name = "path_tracer_cloth"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23.2"
image = "0.23.12"
anyhow = "1.0.37"
rayon = "1.5.0"
rand = "0.8.0"
